tests/failparse1.parse.err
 --> tests/failparse1.v:1:1
  |
1 | Definitionx:Prop:=Prop
  | ^
  |
  = parsing error: expected EOI, keyword_definition, keyword_axiom, keyword_inductive, keyword_print, keyword_check, or keyword_compute